fix(Table): vertical alignment for virtualized rows

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -31,27 +31,25 @@ $block: '.#{variables.$ns}styled-table';
     &__footer-cell {
         padding: var(--_--cell-padding);
         border-block-end: 1px solid var(--g-color-line-generic);
-    }
-
-    &__row {
-        &:last-of-type {
-            #{$block}__cell {
-                border-block-end: none;
-            }
-        }
 
         &_vertical-align {
             &_top {
-                vertical-align: top;
+                align-content: start;
             }
 
             &_center {
-                vertical-align: middle;
+                align-content: center;
             }
 
             &_bottom {
-                vertical-align: bottom;
+                align-content: end;
             }
+        }
+    }
+
+    &__row:last-of-type {
+        #{$block}__cell {
+            border-block-end: none;
         }
     }
 }
